Spacing correction to single resource page.
Aspect-ratio correction for WP block images

--- a/web/app/themes/estyn/resources/styles/app.scss
+++ b/web/app/themes/estyn/resources/styles/app.scss
@@ -1636,6 +1636,12 @@ p.sp-desc {
 
 }
 
+.wp-block-image {
+    img {
+        aspect-ratio: auto !important;
+    }
+}
+
 /** Rogue Media Queries **/
 @media (max-width: 1800px) {
 
